--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,18 +1,18 @@
 <div class="product">
   <p>
-    <span class="product--bold">Name:</span>
+    <span class="text--bold">Name:</span>
     {{ name }}
   </p>
   <p>
-    <span class="product--bold">Price:</span>
+    <span class="text--bold">Price:</span>
     {{ price }}
   </p>
   <p>
-    <span class="product--bold">Description:</span>
+    <span class="text--bold">Description:</span>
     {{ description }}
   </p>
   <p>
-    <span class="product--bold">Available:</span>
+    <span class="text--bold">Available:</span>
     {{ isAvailable }}
   </p>
   <button>
