--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-product-list></app-product-list>
+<div class="app">
+    <app-product-list></app-product-list>
+    <app-cart></app-cart>
+</div>
