--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -5,13 +5,7 @@
         *ngIf="products.length">
         <li *ngFor="let product of products"
             class="cart-list-item">
-            <app-cart-item [name]="product.name"
-                         [price]="product.price"
-                         [description]="product.description"
-                         [category]="product.category"
-                         [isAvailable]="product.isAvailable"
-            >
-            </app-cart-item>
+            <app-cart-item [product]=product></app-cart-item>
         </li>
     </ul>
 </ng-template>
