--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,19 +1,19 @@
 <div class="product">
   <p>
     <span class="text--bold">Name:</span>
-    {{ name }}
+    {{ product.name }}
   </p>
   <p>
     <span class="text--bold">Price:</span>
-    {{ price }}
+    {{ product.price }}
   </p>
   <p>
     <span class="text--bold">Description:</span>
-    {{ description }}
+    {{ product.description }}
   </p>
   <p>
     <span class="text--bold">Available:</span>
-    {{ isAvailable }}
+    {{ product.isAvailable }}
   </p>
   <button>
     Buy
