--- a/src/app/components/cart-item/cart-item.component.html
+++ b/src/app/components/cart-item/cart-item.component.html
@@ -2,19 +2,19 @@
   <div class="cart-item__wrapper">
       <p>
           <span class="text--bold">Name:</span>
-          {{ name }}
+          {{ product.name }}
         </p>
         <p>
           <span class="text--bold">Price:</span>
-          {{ price }}
+          {{ product.price }}
         </p>
         <p>
           <span class="text--bold">Description:</span>
-          {{ description }}
+          {{ product.description }}
         </p>
         <p>
           <span class="text--bold">Available:</span>
-          {{ isAvailable }}
+          {{ product.isAvailable }}
         </p>
   </div>
   </div>
