--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,6 +1,11 @@
-<ul class="product-list list-style--none">
-  <li *ngFor="let product of products"
-      class="product-list-item">
-      <app-product [product]="product"></app-product>
-  </li>
-</ul>
+<div class="product">
+  <h2 class="product__title">
+      Market! Here you can buy something
+  </h2> 
+  <ul class="product-list list-style--none">
+    <li *ngFor="let product of products"
+        class="product-list__item">
+        <app-product [product]="product"></app-product>
+    </li>
+  </ul>
+</div>
