--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+.text {
+
+  &--bold {
+    font-weight: bold;
+  }
+
+  &--red {
+    color: red;
+  }
+
+  &--green {
+    color: green;
+  }
+}
